<?xml version="1.0"?>
<package>
  <name>dwl_msgs</name>
  <version>0.0.1</version>
  <description>
    Message and service data structures for interacting with DWL library in ROS.
  </description>

  <author email="carlos.mastalli@laas.fr">Carlos Mastalli</author>
  <maintainer email="carlos.mastalli@laas.fr">Carlos Mastalli</maintainer>
  <license> BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>dwl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>dwl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
